syntax = "proto3";
package ollo.epoch.v1;
import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
option go_package = "github.com/ollo-station/ollo/x/epoch/types";

//
message Epoch {
    //
    string id = 1 [(gogoproto.moretags) = "yaml:\"id\""];

    //
    google.protobuf.Timestamp start = 2
        [(gogoproto.stdtime) = true, (gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"start\""];

    //
    google.protobuf.Duration duration = 3 [
        (gogoproto.stdduration) = true,
        (gogoproto.nullable) = false,
        (gogoproto.moretags) = "yaml:\"duration\""
    ];

    //
    uint64 current_epoch_number = 4 [(gogoproto.moretags) = "yaml:\"current_epoch_number\""];

    //
    google.protobuf.Timestamp current_epoch_start = 5 [
        (gogoproto.stdtime) = true,
        (gogoproto.nullable) = false,
        (gogoproto.moretags) = "yaml:\"current_epoch_start\""
    ];

    //
    bool epoch_started = 6 [(gogoproto.moretags) = "yaml:\"epoch_started\""];

    //
    reserved 7;

    //
    uint64 current_epoch_start_height = 8 [(gogoproto.moretags) = "yaml:\"current_epoch_start_height\""];
}
