
syntax = "proto3";
package ollo.vault.v1;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "cosmos_proto/cosmos.proto";

option go_package = "github.com/ollo-station/ollo/x/vault/types";

option (gogoproto.equal_all) = false;
option (gogoproto.goproto_getters_all) = false;

message Vault {
  uint64 id = 1 ;
  string owner = 2 [
    (gogoproto.moretags) = "yaml:\"owner\"",
    (cosmos_proto.scalar) = "cosmos.AddressString"
  ];
  string amount_in = 5 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.moretags) = "yaml:\"amount_in\"",
    (gogoproto.nullable) = false
  ];
  string amount_out = 6 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.moretags) = "yaml:\"amount_out\"",
    (gogoproto.nullable) = false
  ];
  google.protobuf.Timestamp created_at = 7 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true,
    (gogoproto.moretags) = "yaml:\"created_at\""
  ];
  string interest_accumulated = 8[
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.moretags) = "yaml:\"interest_accumulated\"",
    (gogoproto.nullable) = false
  ];
  string closing_fee_accumulated = 9 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.moretags) = "yaml:\"interest_accumulated\"",
    (gogoproto.nullable) = false
  ];
  int64 block_height = 10 [
    (gogoproto.moretags)   = "yaml:\"block_height\""
  ];
  google.protobuf.Timestamp block_time = 11 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true,
    (gogoproto.moretags)   = "yaml:\"block_time\""
];

}

message EmissionsVault {
  uint64 id = 1[
    (gogoproto.moretags) = "yaml:\"id\""
  ];
  string amount_in = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.moretags) = "yaml:\"amount_in\"",
    (gogoproto.nullable) = false
  ];
  string amount_out = 3 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.moretags) = "yaml:\"amount_out\"",
    (gogoproto.nullable) = false
  ];
  google.protobuf.Timestamp created_at = 4 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true,
    (gogoproto.moretags) = "yaml:\"created_at\""
  ];
}

message EmissionsVaultRewards {
  string user = 1 [
    (gogoproto.moretags) = "yaml:\"user\"",
    (cosmos_proto.scalar) = "cosmos.AddressString"
  ];
  uint64 block_height = 2 [
    (gogoproto.moretags)   = "yaml:\"block_height\""
  ];

  string amount = 3 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.moretags) = "yaml:\"amount\"",
    (gogoproto.nullable) = false
  ];

}
